# Plant-Growth-Analysis-Tool

./: .gitignore  README.md  create_dummy_images.py  crop.py  gui.py  main.py  plant_analysis.py  pyproject.toml  requirements.txt  verify_full_pipeline.py  verify_script.py
src/plant_analysis/: __init__.py  analyzer.py  config.py  cropper.py  gui.py  utils.py
