[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plant_growth_analysis"
version = "0.1.0"
description = "A tool to analyze plant growth from images using AI cropping and color segmentation."
authors = [
  { name="Surapat", email="your.email@example.com" },
]
dependencies = [
    "opencv-python",
    "numpy",
    "pillow",
    "ultralytics"
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]
